--- a/rds.bib
+++ b/rds.bib
@@ -48,6 +48,16 @@
   year={2010},
   publisher={Wiley Online Library}
 }
+@article{volz2008probability,
+  title={Probability based estimation theory for respondent driven sampling},
+  author={Volz, Erik and Heckathorn, Douglas D},
+  journal={Journal of official statistics},
+  volume={24},
+  number={1},
+  pages={79},
+  year={2008},
+  publisher={Statistics Sweden (SCB)}
+}
 
 @article{christakis2007spread,
   title={The spread of obesity in a large social network over 32 years},
