--- a/final report.tex
+++ b/final report.tex
@@ -1332,15 +1332,15 @@ On the following figures we can observe that the experiments results are very cl
 
 In the section \ref{sec:Current estimators} we got acquainted with following estimators: Sample average, Volz-Heckathon estimator, Group estimator. 
 
-Our methods use the sample average estimator, but the error of estimator differs for each scenario, as for each scenario the sample size and correlation factor is different. The purpose of this study was to suggest the best number of nodes to skip between taking two samples. However, as we  mentioned, the sample average estimator (and therefore estimators for all scenarios) suffers from the bias toward the nodes with higher degrees. We don't know if the estimator for the best scenario performs better than Volz-Heckathon estimator or no.  
+Our methods use the sample average estimator, but the error of estimator differs for each scenario, as for each scenario the sample size and correlation factor is different. The purpose of this study was to suggest the best number of nodes to skip between taking two samples. However, as we  mentioned, the sample average estimator (and therefore estimators for all scenarios) suffers from the bias toward the nodes with higher degrees. We don't know if the estimator for the best scenario performs better than for example standard Volz-Heckathon estimator.  
 
-Volz-Heckathon estimator deals with the problem that random walk visits the nodes with higher degree more frequently. However the problem of dependency between samples remains. The same situation is with the Group estimator.
-Therefore the skipping may also improve Volz-Heckathon estimator. That's why in our experiments for each $k$ we will apply both estimators. 
+Volz-Heckathon estimator deals with the problem of visiting the nodes with higher degree more frequently. However the problem of dependency between samples remains. The same situation is with the Group estimator.
+Therefore the skipping may also improve Volz-Heckathon estimator. That's why in our experiments for each $k$ we will apply to the both estimators. 
 
-However, the error of group estimator will be counted only for the case when $k$ as this estimator uses the information about who hired whom, what would be not correct to use with skipping.
+However, the error of group estimator will be counted only for the case when $k = 1$ as this estimator uses the information about who hired whom, what would be not correct to use with skipping.
 
 
-On the following figures you can see the performance of the estimators for different $k$. The group estimator was applied to the cases when the trait to estimate has only two values (like gender).
+On the following figures you can see the performance of the estimators for different $k$. The group estimator was applied to the cases when the trait to estimate has only two values (like gender) and only when $k=1$.
 
 \begin{figure}[h]
 \centering
@@ -1351,103 +1351,106 @@ On the following figures you can see the performance of the estimators for diffe
     \end{subfigure}
     ~
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreeStud}
-        \caption{ Add health sex }
+        \includegraphics[width=\textwidth]{estimators_drugCook}
+        \caption{ Project 90 drug cook }
 
     \end{subfigure}
     ~
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreeStud}
-        \caption{ Add health sex }
+        \includegraphics[width=\textwidth]{estimators_drugDealer}
+        \caption{ Project 90 drug dealer }
 
     \end{subfigure}
     
     
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreePr90}
-        \caption{ Project 90 sex}
+        \includegraphics[width=\textwidth]{estimators_homeless}
+        \caption{ Project 90 homeless}
 
     \end{subfigure}
     ~
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreeStud}
-        \caption{ Add health sex }
+        \includegraphics[width=\textwidth]{estimators_housewife}
+        \caption{ Project 90 housewife}
 
     \end{subfigure}
     ~
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreeStud}
-        \caption{ Add health sex }
+        \includegraphics[width=\textwidth]{estimators_pimp}
+        \caption{ Project 90 pimp }
 
     \end{subfigure}
     
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreePr90}
-        \caption{ Project 90 sex}
+        \includegraphics[width=\textwidth]{estimators_race}
+        \caption{ Project 90 race}
 
     \end{subfigure}
     ~
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreeStud}
-        \caption{ Add health sex }
+        \includegraphics[width=\textwidth]{estimators_sexWorkClient}
+        \caption{ Estimators sex work client }
 
     \end{subfigure}
     ~
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreeStud}
-        \caption{ Add health sex }
+        \includegraphics[width=\textwidth]{estimators_sexWorker}
+        \caption{ Project 90 sex worker }
 
     \end{subfigure}
     
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreePr90}
-        \caption{ Project 90 sex}
+        \includegraphics[width=\textwidth]{estimators_thief}
+        \caption{ Project 90 thief}
 
     \end{subfigure}
     ~
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreeStud}
-        \caption{ Add health sex }
+        \includegraphics[width=\textwidth]{estimators_unemployed}
+        \caption{ Project 90 unemployed }
 
     \end{subfigure}
     ~
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreeStud}
-        \caption{ Add health sex }
+        \includegraphics[width=\textwidth]{estimators_racesc}
+        \caption{ Add health race }
 
     \end{subfigure}
     
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreePr90}
-        \caption{ Project 90 sex}
+        \includegraphics[width=\textwidth]{estimators_sex}
+        \caption{ Add health gender}
 
     \end{subfigure}
     ~
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreeStud}
-        \caption{ Add health sex }
+        \includegraphics[width=\textwidth]{estimators_grade}
+        \caption{ Add health grade }
 
     \end{subfigure}
     ~
     \begin{subfigure}[b]{0.3\textwidth}
-        \includegraphics[width=\textwidth]{corrDegreeStud}
-        \caption{ Add health sex }
-
+        \includegraphics[width=\textwidth]{estimators_school}
+        
+        %{estimators_legend}
     \end{subfigure}
     
 
 \end{figure} 
 
 
-
-
 First, we can notice that the group estimator corresponds to the V-E estimator when $k = 1$. Indeed in the case when each person hires exactly one person these estimators coincide. As part of this work we considered only this way of recruitment. Therefore in all our experiments the classic VE estimator is exactly the same as Group Estimator.
 
-We see that Volz-Heckathon estimator also imporves. defining the error can be one of the future works.
+Second, we can observe that also Volz-Heckathon benefits from skipping some nodes. This is true for all the examples. Defining the exact error of Volz-Heckthon estimator when some values are discarded can be one of the future works.
 
-We also see that in one cases 
+We also see that there is no estimator that perform better in all cases. For example, sample average estimator has less error for the all traits of Add health graph, when Volz-Heckathon estimator has better results for the traits such as disabled, drug dealer, sex worker, thief for the Project 90 graph.
 
-This is connected woth dependence degree-value
+
+As stated in \cite{goel2010assessing} the advantage to use VHE appears only when the estimated attribute depends on the degree of the node. Indeed, we can ybed on the examples. On the figure \ref{fig:degree-val} the correlation between the nodes degree and value for all traits for both graphs is presented.
+
+Starting from the trait 'disabled', all other traits that have bigger correlation with degree benefit from using V-E estimator. For the rest of the traits, the sample mean performs better. 
+
+
 
 \begin{figure}[h]
 \centering
@@ -1462,21 +1465,8 @@ This is connected woth dependence degree-value
         \caption{ Add health sex }
 
     \end{subfigure}
-
+\label{fig:degree-val}
 \end{figure} 
-
-On the following figures presented result to compare
-
-As stated in \cite{goel2010assessing} the advantage to use VHE appears only when the estimated attribute depends on the degree of the node. 
-
-Indeed we can confirm that .
-
-
-
-
-To support this statement they compare particularly the standard error of the sample mean and RDS estimate on the data sets from Project 90 and Add Health. The results are presented on the figure [put pictures]. 
-
-
 
 \chapter*{Conclusion}
 
@@ -1491,9 +1481,11 @@ In the same way that random graphs can imitate the structure of the graph with n
 
 Using created mathematical model we targeted to find the error of the estimator for different scenarios of enhanced RDS. The scenario with the minimal error would be the best and recommended for applying. First we regarded the geometric model where correlation between samples is the power of difference between observing time of two samples.
 
-Though this model turned out to be too simplify to produce the exact result it gave us valuable products. First, some . Second, it can give us the lower bound.
+Though this model turned out to be too simplify to produce the exact result it can give us the lower bound on the desired result.
 
-Then we were able to generalize the result for any kind of graph with any kind of correlation. Theoretical results were validated with experimentations. For the network with values with used created model and the real networks as well.
+After regarding the simple geometrical model we were able to generalize the result for any kind of graph with any kind of correlation. Theoretical results were then validated with experimentations. For experimentations we used the synthetic networks with values generated according to created model and real data from the school survey Add Health and Project 90.
+
+Finally, we compared two estimators: sample average and Volz-Hechathon estimator. The conclusion is that for the traits that are correlated with the degree of the node the Volz-Hechathon estimator will produce more correct results. In the cases when there is no such correlation sample average performs better.
 
 
 
