last day of internship

--- a/rds.bib
+++ b/rds.bib
@@ -99,6 +99,37 @@
   publisher={Springer}
 }
 
+@article{bearman2004chains,
+  title={Chains of affection: The structure of adolescent romantic and sexual networks1},
+  author={Bearman, Peter S and Moody, James and Stovel, Katherine},
+  journal={American journal of sociology},
+  volume={110},
+  number={1},
+  pages={44--91},
+  year={2004},
+  publisher={JSTOR}
+}
+
+@article{ali2009estimating,
+  title={Estimating peer effects in adolescent smoking behavior: A longitudinal analysis},
+  author={Ali, Mir M and Dwyer, Debra S},
+  journal={Journal of Adolescent Health},
+  volume={45},
+  number={4},
+  pages={402--408},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{jeon2015us,
+  title={US adolescents’ friendship networks and health risk behaviors: a systematic review of studies using social network analysis and Add Health data},
+  author={Jeon, Kwon Chan and Goodson, Patricia},
+  journal={PeerJ},
+  volume={3},
+  pages={e1052},
+  year={2015},
+  publisher={PeerJ Inc.}
+}
 
 @inproceedings{singla2008yes,
   title={Yes, there is a correlation:-from social networks to personal behavior on the web},
