--- a/final report.tex
+++ b/final report.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{report}
 \usepackage{graphicx}
 \usepackage{url}
-\usepackage[top=60pt,bottom=70pt,left=50pt,right=50pt]{geometry}
+\usepackage[top=60pt,bottom=70pt,left=60pt,right=60pt]{geometry}
 %\usepackage[margin = 50pt]{geometry}
 \usepackage{caption}
 \usepackage{subcaption}
@@ -80,25 +80,26 @@ Giovanni \textsc{Neglia} % Supervisor's Name
 
 \chapter*{Introduction}
 
-We are living in the era of information when it is crucial to collect data, to be able to analyze them and draw potentially valuable conclusions. Particularly it is interesting to analyze network structures. The examples are: online-social networks, peer-to-peer networks, real social networks, hidden populations.
+We are living in the era of information when it is crucial to collect data, to be able to analyze them and draw potentially valuable conclusions. It is particularly  interesting to analyze network structures like online-social networks, peer-to-peer networks, real social networks, hidden populations.
 
-Online-social network are thriving nowadays. The most popular are: Google+ (around 1.6 billion users), Facebook (around 1.28 billion users), Twitter (around 645 million users), Instagram (around 300 million users), VK (around 250 million users), LinkedIn (around 200 million users). These networks gather a lot of valuable information like users interests, users characteristics, etc. Great part of it is in the free access. This information can facilitate the life to the sociologists and give them another instrument for the research.
+Online-social network are thriving nowadays. The most popular ones are: Google+ (about 1.6 billion users), Facebook (about 1.28 billion users), Twitter (about 645 million users), Instagram (about 300 million users), VK (about 250 million users), LinkedIn (about 200 million users). These networks gather a lot of valuable information like users interests, users characteristics, etc. Great part of it is free to access. This information can facilitate the work of the sociologists and give them another instrument for the research.
 
+Another important networks are the real ones. All people are members of numerous real social networks like network of friends, business contacts, colleagues, lovers of board games etc. The researchers are interested in studying the network structure. Add Health study \cite{Addhealth} has built the networks of the students in the selected schools of the United States, which served as the foundation of numerous research \cite{jeon2015us}.
 
-As well as it interesting to analyze the structure of network graph by itself it can be useful to study the connection between network structure and the characteristics of the users. It is frequently observed fact that friends tend to be similar interests. It can be the influence of your friend that you listen to the rock music or the opposite you both are fond of rock music and therefore you are friends. One way or another this property of sharing the common characteristics between people that are in contact is usually observed in the networks and is called \textit{\textbf{homophily}}.
+As well as it is interesting to analyze the structure of the network graph by itself it can be useful to study the connection between the network structure and the characteristics of the users. It is frequently observed that friends tend to have similar interests. It can be the influence of your friend that leads you to listening the rock music or the opposite you both are perhaps you became friends because you were both fond of it. One way or another this property of sharing the common characteristics between people that are in contact is usually observed in the networks and is called \textit{\textbf{homophily}}.
 
-And actually sometimes it is the common interest that is in foundation of the network. Online social network Flixster can help to meet people with the similar tastes in movies, the Russian online social network Odnoklassniki helps people to find their old classmates. All people are also the members of the numerous real social networks like network of friends, business contacts, colleagues, lovers of board games etc.
+And actually sometimes it is the common interest that is in foundation of the network itself. The Online social network Flixster can help to meet people with similar tastes in movies, the Russian online social network Odnoklassniki helps people to find their old classmates. 
 
-These property of gathering around similar interest can help to study such particular problem as hidden populations. Examples of hidden populations are drug users, sex workers, jazz musicians. The participants of the hidden population are hard to reach, it means that there is no easy and quick access to the members of these populations. But once the researcher knows some of them he can use this fact that probably they are in contact with another representatives of this population. The individuals of hidden populations from the network around their interest. In this way the subset of this population can be found by "crawling" this graph.
+This property of gathering around similar interests can help to study \textit{\textbf{hidden populations}}. Examples of hidden populations are drug users, sex workers, jazz musicians. Studying the population of drug users or sex workers can help to understand the prevalence of some diseases. The difficulty in studying a hidden population is that it is hidden: the members of such population are by definition hard to reach. It means that there is no easy and quick access to the members of these populations. But once the researcher knows some of them he can take advantage of the fact that probably they are in contact with other representatives of this population. The individuals of hidden populations form the network around their interest. In this way the subset of this population can be found by "crawling" its network graph.
+%What is more important it is hard to estimate what it is probability to sample. 
 
-The methods of sampling that use the contacts of individuals in order to find another members of the population are called \textit{\textbf{chain-referral methods}}.
+The sampling methods that use the contacts of known individuals of a population to find other members are called \textit{\textbf{chain-referral methods}}.
+This way of sampling is different from the ideal uniform independent sampling of individuals and because of homophily leads to increased bias and variance of the estimators as we are going to show. 
 
-This way of sampling is different from uniform independent sampling. The homophily in the network plus the this fashion of sampling together increase the bias and variance of the estimators. 
-
-The structure of the report is following.
-In the chapter 1 we will introduce the current method of sampling hidden populations that is called respondent-driven sampling (RDS). We will discuss what are the problems and challenges related to this method. Next we will propose the enhancement of the current RDS method that we will study later.
-The chapter 2 will develop the mathematical model for studying RDS. Particularly we will introduce the model for controlling the level of homophily for the given network structure. Further using the built model we will find the exact expressions for variance and bias for existing RDS model and enhanced in order to compare them later.
-In the chapter 3, we will compare the performance of the currently used RDS method to our method. Also we will give some practical recommendations for the users of RDS.
+The report is organized as follows.
+In chapter 1 we will introduce the current method of sampling hidden populations that is called respondent-driven sampling (RDS). We will discuss what are the problems and challenges related to this method. Next we will propose the enhancement of the current RDS method that we are going study later.
+The chapter 2 will develop the mathematical model for studying RDS. In particular we will introduce a model to generate synthetic network with the desired level of homophily. Further using the built model we will find the exact expressions for the variance and bias for the existing RDS model and the enhanced one in order to compare them later.
+In chapter 3, we will compare the performance of the currently used RDS method to our method. Also we will give some practical recommendations for the users of RDS.
 
 
 
@@ -106,40 +107,36 @@ In the chapter 3, we will compare the performance of the currently used RDS meth
 
 \section{Motivation}
 
-In order to make the statistical analysis about a particular population researchers need to find the representative subset of this population. After analyzing collected data they can produced the results generalized on the whole population.
+In order to estimate some characteristics of a particular population researchers need to find a representative subset of this population. After analyzing the collected data they can produce general results for the whole population.
+However sometimes they can have difficulties in finding such subset of some populations. Examples can be the population of drug users, of people involved in homosexual relations, of sex workers, of illegal immigrants, of participants in some social movements, of homeless and so on \cite{salganik2004sampling}. The members of these populations are hard to find, they are not willing to participate in the research, that's why these populations are called \textit{hidden populations}.
 
-However sometimes they can have difficulties in finding the subset of the some population. Examples can be the population of the drug users, or the men who have sex with men, or the sex workers, or illegal immigrants, or participants in some social movements, or homeless and so on \cite{salganik2004sampling}. The members of these populations are hard to find, they are not willing to participate in the research, that's why these populations are called \textit{hidden populations}.
+The reasons to study hidden populations can be various. Studying the prevalence of HIV can help to understand and control the spreading of some diseases. A lot of research is targeted on the studying the HIV prevalence among hidden populations like drug users, female sex workers \cite{musyoki2015prevalence}, gay men \cite{ramirez2005networks}.  Another study \cite{heckathorn2003jazz} studied the population of jazz musicians. Even if the jazz musicians have no reasons to hide them, it is still hard to access them with the standard sampling methods. This study considers the important from the social side question: what is more important for the income level, the number of social connections or the level of professional activity.
 
-The reasons to study them can be various. A lot of research is targeted on the studying the HIV prevalence among hidden populations like drug users, female sex workers \cite{musyoki2015prevalence}, gay men \cite{ramirez2005networks}. Studying the prevalence of HIV can help to understand and control the spreading of the disease. The study \cite{heckathorn2003jazz} was particularly exploring how the connections or the level of professional activity influence more on the income level.
+In order to collect samples from the hidden population some special technique were developed. The main challenge here is that each individual has the same probability to be sampled, or if some bias exists it can be easily removed. For example, using telephone survey in order to collect information would automatically exclude some subsets of people (like homeless, poor) that don't have telephone number. This fact can affect the correctness of the estimate because it is impossible to predict the bias that we introduce by considering only individual with telephone number. 
 
+Time-space sampling tries to solve this problem by sampling from different venue-time segments. Each venue-time segment(e.g., Place Massena, Friday, 21.00-24.00) is selected with probability based on the expected number of participants at this segment. However it is impossible to sample exhaustive list of all venue-time segments that results again in the  unknown bias of obtained estimation.
 
+Another approach to sample hidden population is using chain-referral techniques. The researchers benefit from the fact that people tend to know each other when they have common interests. A jazz musician has a lot of reasons to know another jazz musicians: they may perform in the same clubs, they probably attend the same events, they may collaborate with each other and so on. The researcher can then find just a few representatives of the hidden population and then ask them to provide the contacts of other members of this population.
 
-
-In order to collect samples from the hidden population some special technique were developed. The main challenge here is that the technique should assure that samples are collected with the same probability (or with the known probability). For example, using telephone survey in order to collect information would automatically exclude some subsets of people (like homeless, poor) that don't have telephone number. This fact can affect the correctness of the estimate because it is impossible to predict the bias. 
-
-Time-space sampling tries to solve this problem by sampling from different venue-time segments. Each venue-time segment is selected with probability based on the expected number of participants at this segment. However it is impossible to sample exhaustive list of all venue-time segments that results again in the  unknown bias of obtained estimation.
-
-Another approach to sample hidden population is using chain-referral techniques. The researchers benefit from the fact that people tend to know each other when they have common interests. A jazz musician has a lot of reasons to know another jazz musicians: they may perform in the same clubs, they probably attend the same events, they may collaborate with each other and so on. The researcher can find just several representatives of hidden population and then ask them to provide the contacts of another members of this population.
-
-One particular chain-referral technique that is currently widely used for studying prevalence of HIV/AIDS among injection drug users, sex workers, men who have sex with men is called \textit{\textbf{respondent-driven sampling}} (RDS).
+One particular chain-referral technique that is currently widely used for studying prevalence of HIV/AIDS among injection drug users, sex workers, men who have sex with men is called (RDS) \textit{\textbf{respondent-driven sampling}}.
 
 
-\section{Technique of respondent-driven sampling}
-RDS begins with selecting group of initial participants that are called \textit{seeds}. The procedure follows according to chain-referral model: each participant in study recruits another participants. The step is called wave. Both participating in the research and recruiting new participants are encouraged by financial incentive. The sampling continues in this way until needed size of participants is reached. During RDS participants are asked to report how many contacts they have.
+\section{Respondent-driven sampling}
+RDS begins by selecting a group of initial participants that are called \textit{seeds}. The procedure follows according to chain-referral model: each participant in study recruits another participants. The step is called wave. Both participating in the research and recruiting new participants are encouraged by financial incentive. The sampling continues in this way until needed size of participants is reached. During RDS participants are asked to report how many contacts they have.
 This process enables to collect data for making statistical analysis.
 
 In order to study formally RDS we will model the network of people as the graphs, where the nodes are presented by the individuals and the contact between two individuals is represented by the edge between the correspondent nodes. Then RDS can be regarded as random walk on the graph when the following assumptions are true:
 \begin{enumerate}
   \item Seeds are chosen proportionally to their degree in the network.  
-  \item If individual $A$ knows individual $B$ than individual $B$ knows $A$ as well (network can be represented as undirected graph).
+  \item If individual $A$ knows individual $B$ than individual $B$ knows $A$ as well (the network can be represented as undirected graph).
   \item The same individual can be recruited multiple times (sampling with replacement).
   \item The choice of contacts to recruit is uniformly at random.
   \item Individuals know and report precisely their network degree. 
-  \item Each individual is reachable from each other individual (network is connected). 
+  \item Each individual is reachable from each other individual (the network is connected). 
 \end{enumerate}
 
 
-For this process stationary distribution is exactly distribution proportional to network degree. So first assumption guaranties that not only first but all samples during the process are taken with probability proportional to the degree of participants in the network. In \cite{salganik2004sampling} this assumption is considered to be reasonable as the people that are drawn as seeds are well-known people and they have usually more contacts than on average. Without this assumption first there should be performed enough number of waves until sample can be considered drawn from stationary distribution. 
+For this process stationary distribution is exactly distribution proportional to the network degree. So first assumption guaranties that not only first but all samples during the process are taken with probability proportional to the degree of participants in the network. In \cite{salganik2004sampling} this assumption is considered to be reasonable as the people that are drawn as seeds are well-known people and they have usually more contacts than on average. Without this assumption first there should be performed enough number of waves until sample can be considered drawn from stationary distribution. 
 
 Some of these assumptions are not so restrictive, like the second one. The other assumptions are arguable. The sensitivity of violation these assumptions were studied in \cite{gile2010respondent} with the simulation experiments. 
 
@@ -266,7 +263,7 @@ In some literature as in  \cite{goel2010assessing} the ratio of the variance of 
 
 \subsection{Other problems}
 
-RDS can perform poorly if the groups of individuals form different communities. In \cite{goel2009respondent} it is shown that 'bottlenecks' between different groups in hidden population increases variance of RDS estimator. They try RDS on network structure with communities, but where individuals, that are in contact with each other, do not have similar traits and showed that such structure indeed affects on RDS estimate. 
+RDS can perform poorly if the groups of individuals form different communities. In \cite{goel2009respondent} it is shown that 'bottlenecks' between different groups in hidden population increases variance of RDS estimator. They try RDS on the network structure with communities, but where individuals, that are in contact with each other, do not have similar traits and showed that such structure indeed affects on RDS estimate. 
 
 
 \section{Enhanced RDS}
@@ -414,7 +411,7 @@ The simplest idea is to assign values randomly to the nodes independently of the
 
 We already explained that this property is frequently encountered in the real networks.
 
-The reason why we don't want to ignore homophily is because the way of performing sampling and the property of homophily together influence on the sampling variance and bias. Further we will count formally the sampling variance for given network and attribute of the nodes.
+The reason why we don't want to ignore homophily is because the way of performing sampling and the property of homophily together influence on the sampling variance and bias. Further we will count formally the sampling variance for the given network and attribute of the nodes.
 
 So for study purposes we would like to assign values to the nodes of the network in such a way that the value of the node depends on values of its neighbors.
 The other point is that the level of correlation can be different within the same network but for different attributes. 
@@ -875,7 +872,7 @@ To understand practical value, let's look at the part of Facebook graph\ref{fig:
 
 \section{Error prediction}
 
-Now, when we have network, where each node maintain the value we can begin to study formally described in the section 
+Now, when we have the network, where each node maintain the value we can begin to study formally described in the section 
 \ref{sec:Enhanced RDS} method of enhanced RDS.
 
 Due to homoplily in the network and the way the respondent-driven sampling is performed the variance of the estimator will be different from the case if it was just independent uniform sampling. Studying variance is important for multiple reasons. It essential for building confidence intervals. It is the factor the influences on the error of estimator. When we have multiple estimators and we know the error of each of them we have the instrument to compare them.
@@ -1236,7 +1233,7 @@ There is know way to predict this value correctly without knowing the graph and 
 To validate our theoretical results we performed numerous simulations. For the graph structure with values on the nodes we used different sources of the data. 
 
 First, we used random graphs with values generated with the algorithm. 
-Then we used real network structures like part of Facebook \cite{Facebook}  and assigned values with the algorithm.
+Then we used the real network structures like part of Facebook \cite{Facebook}  and assigned values with the algorithm.
 
 The real network structures where the nodes have some data are scares. There are just several sources like this. We used data from the Project 90\cite{Project90}, data from the project Add health\cite{Addhealth}. 
 
